--- a/docs/UML/classes/decision_group.adoc
+++ b/docs/UML/classes/decision_group.adoc
@@ -18,8 +18,12 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*1..1*
-|*test*: `CONTEXT_EXPRESSION`
-a|Test expression that generates a value of any type whose sub-ranges may be assigned to the various output branches, in the manner of a switch statement.
+|*value*: `EL_SCOPED_REF`
+a|Reference to an Expression Language terminal that may be a function call or property reference. The Result value is compared to `_value_constraint_` sub-ranges in each of the various output branches, in the manner of a case statement.
+
+h|*1..1*
+|*else_branch*: `ADHOC_BRANCH`
+a|Mandatory catch-all branch to ensure exhaustive coverage of the test `_value_`.
 
 h|*0..1 +
 (redefined)*
