--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -6,12 +6,17 @@
 
 4+^h|*PROC Release 2.0.0 (unreleased)*
 
-|[[latest_issue]]1.5.1
+|[[latest_issue]]2.0.0
+|{spec_tickets}/SPECPROC-40[SPECPROC-40^]. Context variable references to BMM-EL entities; separate out decision logic and proxy objects.
+|T Beale
+|[[latest_issue_date]]15 May 2020
+
+|1.5.1
 |{spec_tickets}/SPECPROC-33[SPECPROC-33^]. Support progressive data set creation. +
  {spec_tickets}/SPECPROC-39[SPECPROC-39^]. Correct error in `TASK_LIFECYCLE` state enumeration: remove `resumed` state; also correct mentions of `aborted` state to `abandoned`.
 |M Kejžar, +
  T Beale
-|[[latest_issue_date]]13 May 2020
+|13 May 2020
 
 4+^h|*PROC Release 1.5.0*
 
